# examify-ai

./: .env.example  .gitignore  .gitmodules  BIT_1103_AUGUST_2011_Basic_Electricity.md  COURSES_TASKS.md  INSTITUTION_LOGO_UPLOAD_FIX.md  README.md  STATUS.md  TASK.md  env.example  next.config.ts  package-lock.json  package.json  pyproject.toml  response_1754314288729.json  test_openrouter.py
backend/: README.md
docs/: ANALYTICS_QUICK_START.md  SEARCH_AND_FILTER_IMPLEMENTATION.md
exam_paper_parser/: __init__.py  cli.py  image_processor.py  metadata.py  prompts.py  s3_client.py  schemas.py  tracking.py
exam_paper_parser/llm_providers/: __init__.py  base.py  gemini.py  openrouter.py  zai.py
exam_paper_parser/providers/: base.py
exampaper-generator/: README.md  TECH_SPEC.md  requirements.txt
exampaper-generator/app/: db_connector.py  exam_assembler.py  main.py  schemas.py  text_to_sql.py
frontend/: Dockerfile  README.md
frontend/docs/: ANALYTICS_SETUP.md
frontend/src/: constants.ts
parser/: DBIT 103 FOUNDATIONS OF MATHEMATICS (1).md  DBIT 306 OBJECT ORIENTED ANALYSIS AND DESIGN (1).md  DIT 0104 COMPUTER ORGANIZATION AND ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  test_gemini.py  test_phase2_gemini.py  test_phase2_output.json  test_zai.py
parser/exam_paper_parser/: cli.py  pdf_parser.py  s3_client.py  tracking.py  validator.py
parser/exam_paper_parser/llm_providers/: zai.py
parser/exam_paper_parser/providers/: __init__.py  mineru.py  zai.py
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx
src/hooks/: useExamPaperSearch.ts  (+4 more)
(+208 files in other folders)
