[project]
name = "exam-paper-parser"
version = "0.3.0"
description = "Exam paper PDF to structured JSON pipeline with MinerU and Z.ai providers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Exam Paper Parser Contributors" }
]
keywords = ["exam", "pdf", "ocr", "mineru", "z-ai", "question-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sniffio>=1.3.1",
    "zai-sdk>=0.2.0",
    "boto3>=1.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-decouple>=3.8",
    "dotenv>=0.9.9",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
exam-paper-parser = "exam_paper_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exam_paper_parser"]
